--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,242 +1,162 @@
 [
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan0_100",
+    "prefix": "model_lrelu_0_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 0 -c data_size 100",
+    "args": "-c hidden_activation lrelu -c model_size 0 -c data_size 200",
+    "replicates": 1 
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_1_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 1 -c data_size 200",
+    "replicates": 1 
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_2_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 2 -c data_size 200",
+    "replicates": 1 
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_3_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 3 -c data_size 200",
+    "replicates": 1 
+  },
+    {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_4_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 4 -c data_size 200",
+    "replicates": 1 
+  },
+      {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_5_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 5 -c data_size 200",
+    "replicates": 1 
+  },
+      {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_6_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 6 -c data_size 200",
+    "replicates": 1 
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_7_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 7 -c data_size 200",
+    "replicates": 1 
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_8_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 8 -c data_size 200",
+    "replicates": 1 
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_lrelu_9_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation lrelu -c model_size 9 -c data_size 200",
+    "replicates": 1 
+  },
+  {
+    "exp":"exp/minitaur_env_adaptation.py",
+    "prefix": "model_10_200",
+    "result_dir":"exp/log",
+    "walltime": "2:00",
+    "args": "-c hidden_activation relu -c model_size 10 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan1_100",
+    "prefix": "model_11_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 1 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 11 -c data_size 200",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan2_100",
+    "prefix": "model_12_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 2 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 12 -c data_size 200",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan3_100",
+    "prefix": "model_13_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 3 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 13 -c data_size 200",
     "replicates": 1
   },
     {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan4_100",
+    "prefix": "model_14_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 4 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 14 -c data_size 200",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan5_100",
+    "prefix": "model_15_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 5 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 15 -c data_size 200",
     "replicates": 1
   },
       {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan6_100",
+    "prefix": "model_16_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 6 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 16 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan7_100",
+    "prefix": "model_17_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 7 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 17 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan8_100",
+    "prefix": "model_18_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 8 -c data_size 100",
+    "args": "-c hidden_activation relu -c model_size 18 -c data_size 200",
     "replicates": 1
   },
   {
     "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan9_100",
+    "prefix": "model_19_200",
     "result_dir":"exp/log",
     "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 9 -c data_size 100",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan0_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 0 -c data_size 200",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan1_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 1 -c data_size 200",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan2_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 2 -c data_size 200",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan3_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 3 -c data_size 200",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan4_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 4 -c data_size 200",
-    "replicates": 1
-  },
-      {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan5_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 5 -c data_size 200",
-    "replicates": 1
-  },
-      {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan6_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 6 -c data_size 200",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan7_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 7 -c data_size 200",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan8_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 8 -c data_size 200",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan9_200",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 9 -c data_size 200",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan0_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 0 -c data_size 50",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan1_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 1 -c data_size 50",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan2_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 2 -c data_size 50",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan3_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 3 -c data_size 50",
-    "replicates": 1
-  },
-    {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan4_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 4 -c data_size 50",
-    "replicates": 1
-  },
-      {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan5_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 5 -c data_size 50",
-    "replicates": 1
-  },
-      {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan6_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 6 -c data_size 50",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan7_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 7 -c data_size 50",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan8_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 8 -c data_size 50",
-    "replicates": 1
-  },
-  {
-    "exp":"exp/minitaur_env_adaptation.py",
-    "prefix": "model_tan9_50",
-    "result_dir":"exp/log",
-    "walltime": "2:00",
-    "args": "-c hidden_activation tanh -c model_size 9 -c data_size 50",
+    "args": "-c hidden_activation relu -c model_size 19 -c data_size 200",
     "replicates": 1
   }
 ]
