--- a/fast_adaptation_embedding/config.json
+++ b/fast_adaptation_embedding/config.json
@@ -1,42 +1,76 @@
 [
    {
-    "exp":"exp/pexod_env_adaptation.py",
-    "prefix": "pexod_H25",
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H1_K25",
     "result_dir":"exp/log",
     "walltime": "1:00",
-    "args": "-c horizon 25  ",
+    "args": "-c horizon 1 -c K 25 -c episode_length 40",
     "replicates": 3
   },
      {
-    "exp":"exp/pexod_env_adaptation.py",
-    "prefix": "pexod_H50",
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H5_K25",
     "result_dir":"exp/log",
     "walltime": "1:00",
-    "args": "-c horizon 50  ",
+    "args": "-c horizon 5 -c K 25 -c episode_length 40",
+    "replicates": 3
+  },
+     {
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H10_K25",
+    "result_dir":"exp/log",
+    "walltime": "1:00",
+    "args": "-c horizon 10 -c K 25 -c episode_length 40",
+    "replicates": 3
+  },
+
+  {
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H1_K100",
+    "result_dir":"exp/log",
+    "walltime": "1:00",
+    "args": "-c horizon 1 -c K 100 -c episode_length 10",
+    "replicates": 3
+  },
+    {
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H5_K100",
+    "result_dir":"exp/log",
+    "walltime": "1:00",
+    "args": "-c horizon 5 -c K 100 -c episode_length 10",
+    "replicates": 3
+  },
+    {
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H10_K100",
+    "result_dir":"exp/log",
+    "walltime": "1:00",
+    "args": "-c horizon 10 -c K 100 -c episode_length 10",
+    "replicates": 3
+  },
+
+    {
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H1_K50",
+    "result_dir":"exp/log",
+    "walltime": "1:00",
+    "args": "-c horizon 1 -c K 50 -c episode_length 20",
+    "replicates": 3
+  },
+      {
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H5_K50",
+    "result_dir":"exp/log",
+    "walltime": "1:00",
+    "args": "-c horizon 5 -c K 50 -c episode_length 20",
     "replicates": 3
   },
   {
-    "exp":"exp/pexod_env_adaptation.py",
-    "prefix": "pexod_H100",
+    "exp":"exp/controlled_minitaur_env_adaptation.py",
+    "prefix": "minitaur_H10_K50",
     "result_dir":"exp/log",
     "walltime": "1:00",
-    "args": "-c horizon 75  ",
-    "replicates": 3
-  },
-  {
-    "exp":"exp/pexod_env_adaptation.py",
-    "prefix": "pexod_H200",
-    "result_dir":"exp/log",
-    "walltime": "1:00",
-    "args": "-c horizon 100  ",
-    "replicates": 3
-  },
-       {
-    "exp":"exp/pexod_env_adaptation.py",
-    "prefix": "pexod_H400",
-    "result_dir":"exp/log",
-    "walltime": "1:00",
-    "args": "-c horizon 200  ",
+    "args": "-c horizon 10 -c K 50 -c episode_length 20",
     "replicates": 3
   }
 ]
